src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContext_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContext_StringErrorContext.class */
public final class GLXEXTImportContext_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXGetCurrentDisplayEXT()J", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContextErrorContext");
        methods.put("nglXQueryContextInfoEXT(JJIJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContextErrorContext");
        methods.put("glXQueryContextInfoEXT(JJILjava/nio/IntBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContextErrorContext");
        methods.put("glXGetContextIDEXT(J)J", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContextErrorContext");
        methods.put("glXImportContextEXT(JJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContextErrorContext");
        methods.put("glXFreeContextEXT(JJ)V", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContextErrorContext");
        methods.put("glXQueryContextInfoEXT(JJI[I)I", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTImportContextErrorContext");
        return methods;
    }
}
